--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,6 @@
 image: node:14-alpine
 
 
-before_script:
-
-  - IMAGE_TAG="$(echo $CI_COMMIT_SHA | head -c 8)"
-
-
-
 stages:
 
   - build
@@ -56,11 +50,12 @@ package:
 
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
+    - IMAGE_TAG="$(echo $CI_COMMIT_SHA | head -c 8)"
   script:
     - docker build -t yallic/protein-bitirme:latest .
-    - echo $IMAGE_TAG
-    - docker tag yallic/protein-bitirme:latest yallic/protein-bitirme:$IMAGE_TAG
-    - docker push yallic/protein-bitirme:$IMAGE_TAG
+    - echo ${IMAGE_TAG}
+    - docker tag yallic/protein-bitirme:latest yallic/protein-bitirme:${IMAGE_TAG}
+    - docker push yallic/protein-bitirme:${IMAGE_TAG}
 
 deploy:
   stage: deploy
@@ -70,10 +65,11 @@ deploy:
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure set region $AWS_DEFAULT_REGION
     - $(aws ecr get-login --no-include-email --region "${AWS_DEFAULT_REGION}")
+    - IMAGE_TAG="$(echo $CI_COMMIT_SHA | head -c 8)"
   script:
-    - echo $REPOSITORY_URL:$IMAGE_TAG
+    - echo $REPOSITORY_URL:${IMAGE_TAG}
     - TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "$TASK_DEFINITION_NAME" --region "${AWS_DEFAULT_REGION}")
-    - NEW_CONTAINER_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$REPOSITORY_URL:$IMAGE_TAG" '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
+    - NEW_CONTAINER_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$REPOSITORY_URL:${IMAGE_TAG}" '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
     - echo "Registering new container definition..."
     - aws ecs register-task-definition --region "${AWS_DEFAULT_REGION}" --family "${TASK_DEFINITION_NAME}" --container-definitions "${NEW_CONTAINER_DEFINITION}"
     - echo "Updating the service..."
