--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,35 +9,35 @@ stages:
   - package
   - deploy 
 
-build:
+# build:
   
-  stage: build
-  tags:
-    - build
+#   stage: build
+#   tags:
+#     - build
 
-  before_script:
+#   before_script:
 
-    - npm install
+#     - npm install
 
-  script:
-    - npm run build
+#   script:
+#     - npm run build
 
-  cache:
-    key: npm
-    paths:
-      - node_modules/
-test:
-  stage: test
-  tags:
-    - test
+#   cache:
+#     key: npm
+#     paths:
+#       - node_modules/
+# test:
+#   stage: test
+#   tags:
+#     - test
 
-  script:
-    - npm test
+#   script:
+#     - npm test
 
-  cache:
-    key: npm
-    paths:
-      - node_modules/
+#   cache:
+#     key: npm
+#     paths:
+#       - node_modules/
 
 package:  
   stage: package
@@ -70,7 +70,7 @@ deploy:
     - TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "$TASK_DEFINITION_NAME" --region "${AWS_DEFAULT_REGION}")
     - NEW_CONTAINER_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$REPOSITORY_URL:${IMAGE_TAG}" '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
     - echo "Registering new container definition..."
-    - aws ecs register-task-definition --region "${AWS_DEFAULT_REGION}" --family "${TASK_DEFINITION_NAME}" --requires-compatibilities FARGATE --network-mode awsvpc --container-definitions "${NEW_CONTAINER_DEFINITION}"
+    - aws ecs register-task-definition --region "${AWS_DEFAULT_REGION}" --family "${TASK_DEFINITION_NAME}" --requires-compatibilities FARGATE --network-mode awsvpc --cpu 1024 --memory 2048 --container-definitions "${NEW_CONTAINER_DEFINITION}"
     - echo "Updating the service..."
     - aws ecs update-service  --region "${AWS_DEFAULT_REGION}" --cluster "${CLUSTER_NAME}" --service "${SERVICE_NAME}"  --task-definition "${TASK_DEFINITION_NAME}"
  
