Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,11 @@ deploy:
   image:
     name: alpine/helm:3.5.3
     entrypoint: [""]
+  before_script:
+    - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl
+    - chmod +x ./kubectl
+    - mv ./kubectl /usr/local/bin/kubectl
+
   script:
     - kubectl get deployments
     
