Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,15 +77,30 @@ deploy:
   image:
     name: alpine/helm:3.5.3
     entrypoint: [""]
-  before_script:
-    - apk update
-    - apk add curl
-    - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl
-    - chmod +x ./kubectl
-    - mv ./kubectl /usr/local/bin/kubectl
+  variables:
+    CHART: protein-prject
 
+  before_script:
+    - apk add git
+    - helm plugin install https://github.com/chartmuseum/helm-push
+    # - >
+    #   helm repo add ${CHART}
+    #   --username ${CI_REGISTRY_USER}
+    #   --password ${CI_REGISTRY_PASSWORD}
+    #   ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/helm/stable
+    - helm create ${CHART}
+    - rm -rf ${CHART}/templates/test
+    - rm ${CHART}/templates/*.yaml
+    - cp deployment.yaml ${CHART}/templates/
+    - cp service.yaml ${CHART}/templates/
   script:
-    - kubectl get deployments
+    - helm package ${CHART}
+    - ls
+    - echo ${CI_REGISTRY_PASSWORD}
+    - helm repo add --username ${CI_REGISTRY_USER} --password ${AUTH_TOKEN} incubator https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/helm/incubator
+    - helm cm-push ${CHART}*.tgz incubator
+    - helm install protein-project incubator/${CHART}
+
     
 
 
